src/test/deca/context/invalid/expr_cast_Object_to_float.deca
// Test de la règle (3.39) : on ne peut pas cast de Object vers float.
{
	float var1;
	Object var2;
	var1 = (float)(var2);
}

// Résultat :
//# a
